MP: Final move of datatypes to Kotlin